--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+@use './variables';
+
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+
+@import '../node_modules/font-awesome/scss/font-awesome';
+
+/* Colores básicos */
+
+$primary_0: #FD009D;
+$primary_1: #F0FFFF;
+$primary_2: #A569BD;
+$primary_3: #4A235A;
+$primary_4: #401E4E;
+$secondary_1: #00CCFF;
+$secondary_2: #CCFF00;
+$secondary_3: #00FF33;
+$secondary_4: #13DAB6;
+
+$raColor_1: #0B132B;
+$raColor_2: #1C2541;
+$raColor_3: #3A506B;
+$raColor_4: #5BC0BE;
+$raColor_5: #6FFFB9;
+
+body{
+    padding: 0;
+    margin: 0;
+    background-color: $raColor_3;
+    font-family: 'Audiowide', cursive;
+    color: $primary_1;
+    height: 100%;
+}
+
+body::-webkit-scrollbar{
+    width: 15px;
+    border-radius: 10px;
+    background-color: rgba($color: $primary_0, $alpha: .5);
+}
+
+body::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: rgba($color: $raColor_5, $alpha: .6);
+}
