--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -8,6 +8,10 @@ $raColor_3: #3A506B;
 $raColor_4: #5BC0BE;
 $raColor_5: #6FFFB9;
 
+body{
+    height: 100%;
+}
+
 .descripcion{
     text-align: justify;
     font-family: 'Quantico', sans-serif;
