--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -1,4 +1,4 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px" class="services">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex fxLayoutAlign="center">
     <div>
