--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -18,4 +18,7 @@
       <img src="/assets/images/soporteRA1.png" class="descripcion-img" alt="descripcion-img">
     </div>
   </div>
+  <button mat-raised-button (click)="openDialog()" class="register_button"><span>Registrate</span></button>
 </mat-card>
+
+
