--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -18,9 +18,8 @@ $raColor_5: #6FFFB9;
     background-color: $raColor_2;
     color: $primary_1;
     width: 100%;
-    position: fixed;
-    bottom: 0;
-    z-index: 1;
+    // position: fixed;
+    // bottom: 0;
 }
 
 .Copyright{
