--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,41 @@
-/* You can add global styles to this file, and also import other style files */
 @use './variables';
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$RA_Solutions-primary: mat.define-palette(mat.$indigo-palette);
+$RA_Solutions-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$RA_Solutions-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$RA_Solutions-theme: mat.define-light-theme((
+  color: (
+    primary: $RA_Solutions-primary,
+    accent: $RA_Solutions-accent,
+    warn: $RA_Solutions-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($RA_Solutions-theme);
+
+/* You can add global styles to this file, and also import other style files */
+
 
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 
@@ -42,3 +78,6 @@ body::-webkit-scrollbar-thumb{
     border-radius: 10px;
     background-color: rgba($color: $raColor_5, $alpha: .6);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
