--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Quantico:ital,wght@1,700&display=swap');
+
 /* Colores básicos */
 
 $primary_1: #F0FFFF;
@@ -18,11 +20,8 @@ $raColor_5: #6FFFB9;
     background-color: $raColor_2;
     color: $primary_1;
     width: 100%;
-<<<<<<< HEAD
-    // position: fixed;
-    // bottom: 0;
-=======
->>>>>>> fade3560c99e4a5e78b813f011990f8719018ee1
+    height: 110px;
+    font-family: 'Audiowide', sans-serif;
 }
 
 .Copyright{
