--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,13 +6,9 @@
   </div>
 
   <div fxflex>
-    <button mat-raised-button routerLink="/servicios" routerLinkActive="active" class="servicios_button"><span class="fa fa-wrench fa-lg"></span> Servicios</button>
-    <button mat-raised-button routerLink="/about" routerLinkActive="active" class="info_button"><span class="fa fa-address-card fa-lg"></span> Contacto</button>
-<<<<<<< HEAD
-    
-=======
-    <button mat-raised-button (click)="openRegForm()" class="register_button"><span>Registrate</span></button>
->>>>>>> fade3560c99e4a5e78b813f011990f8719018ee1
+    <button mat-raised-button routerLink="/servicios" routerLinkActive="active" class="servicios_button"><fa-icon [icon]="faComputer" size="lg"></fa-icon> Servicios</button>
+    <button mat-raised-button routerLink="/about" routerLinkActive="active" class="info_button"><fa-icon [icon]="faAddressCard" size="lg"></fa-icon> Contacto</button>
+    <button mat-raised-button (click)="openRegForm()" class="register_button"><fa-icon [icon]="faUserAstronaut" size="lg"></fa-icon> Log in</button>
   </div>
   
   <span class="flex-spacer"></span>
