--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,24 +1,18 @@
-<div fxFlexOffset="5" fxFlex="40" class="descripcion">
-  <mat-card>
-    <mat-card-title>
-      <h2>Nosotros</h2>
-    </mat-card-title>
-    <p>Somos una empresa con m&aacute;s de 15 a&ntilde;os de experiencia en el soporte t&eacute;cnico,
-      venta y mantenimiento de equipos de c&oacute;mputo, y redes inform&aacute;ticas.</p>
-    <p>
-      Brindamos nuestros servicios a particulares, as&iacute; como a grandes empresas reconocidas a nivel nacional.
-    </p>
-  </mat-card>
-</div>
 
-
-<mat-card>
-  <div fxlayout="row" fxLayoutAlign="center center">
-    <div fxFlex>
-      <img src="/assets/images/soporteRA1.png" class="descripcion-img" alt="descripcion-img">
+<div class="container" fxLayout="column" fxLayoutAlign="center center">
+  <div class="descripcion">
+    <mat-card>
+      <mat-card-title>
+        <h2>Nosotros</h2>
+      </mat-card-title>
+      <p>Somos una empresa con m&aacute;s de 15 a&ntilde;os de experiencia en el soporte t&eacute;cnico,
+        venta y mantenimiento de equipos de c&oacute;mputo, y redes inform&aacute;ticas.</p>
+      <p>
+        Brindamos nuestros servicios a particulares, as&iacute; como a grandes empresas reconocidas a nivel nacional.
+      </p>
+    </mat-card>
+    <div>
+      <img src="/assets/images/soporteRA1.png">
     </div>
   </div>
-  <button mat-raised-button (click)="openDialog()" class="register_button"><span>Registrate</span></button>
-</mat-card>
-
-
+</div>
