--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -19,6 +19,8 @@ $raColor_5: #6FFFB9;
 .header {
   background: $raColor_1;
   width: 100%;
+  height: 120px;
+  font-family: 'Audiowide', sans-serif;
 }
 
 .logo {
@@ -30,13 +32,15 @@ $raColor_5: #6FFFB9;
   left: 5%;
 }
 
+//------ Buttons ------//
+
 .servicios_button {
   --green: #6FFFB9;
   font-size: 15px;
   padding: 0.25em 1.75em;
   letter-spacing: 0.06em;
   position: relative;
-  right: 50px;
+  right: 60px;
   font-family: inherit;
   border-radius: 0.6em;
   overflow: hidden;
@@ -95,7 +99,45 @@ button:hover:before {
     padding: 0.25em 1.75em;
     letter-spacing: 0.06em;
     position: relative;
-    right: 25px;
+    right: 35px;
+    font-family: inherit;
+    border-radius: 0.6em;
+    overflow: hidden;
+    transition: all 0.3s;
+    line-height: 1.4em;
+    border: 2px solid var(--green);
+    background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%, transparent 60%, rgba(27, 253, 156, 0.1) 100%);
+    color: var(--green);
+    box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.4), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+  }
+  
+  button:hover {
+    color: #82ffc9;
+    box-shadow: inset 0 0 10px rgba(27, 253, 156, 0.6), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+  }
+  
+  button:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(27, 253, 156, 0.1) 40%, rgba(27, 253, 156, 0.1) 60%, transparent 100%);
+  }
+  
+  button:hover:before {
+    transform: translateX(15em);
+  }
+
+  .register_button {
+    --green: #6FFFB9;
+    font-size: 15px;
+    padding: 0.25em 1.75em;
+    letter-spacing: 0.06em;
+    position: relative;
+    right: 15px;
     font-family: inherit;
     border-radius: 0.6em;
     overflow: hidden;
