--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -1,5 +1,5 @@
 /*Cuantico Font*/
-@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Quantico:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 /* Colores básicos */
 $raColor_1: #0B132B;
@@ -8,20 +8,26 @@ $raColor_3: #3A506B;
 $raColor_4: #5BC0BE;
 $raColor_5: #6FFFB9;
 
-body{
-    height: 100%;
+
+.container{
+    height: calc(100vh - 230px);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    .descripcion{
+        width: 600px;
+        text-align: justify;
+    }
+    p, h1, h2, h3{
+        font-family: 'Russo One', sans-serif;
+    }
+    img {
+        margin-top: 20px;
+        width: 100%;
+        border-radius: 5px;
+    }
 }
 
-.descripcion{
-    text-align: justify;
-    font-family: 'Quantico', sans-serif;
-}
 
-.descripcion-img{
-    width: 80%;
-    height: auto;
-    position: relative;
-    top: 20px;
-    left: 50px;
-}
+
+
     
