estilos principal, header, footer

--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,18 +1,38 @@
+<div fxLayout="column" fxLayoutAlign="start center" class="container">
+  <div class="intro">
+    <h2>JRA Solutions</h2>
+    <p>
+      Somos una empresa con m&aacute; de 10 años de experiencia, dedicada a brindar servicios 
+      de reparaci&oacute;, venta, y soporte t&eacute;cnico a equipos de c&oacute;mputo, instalaci&oacute;
+      de redes inform&aacute;, circuitos de video-vigilancia, as&iacute; como a la creaci&oacute;y mantenimiento
+      de p&aacute;ginas y aplicaciones web.
+    </p>
+    <p>
+      Hemos bindado nuestros servicios a grandes empresas reconocidas a nivel nacional, así como a particulares,
+      nuestra calidad y experiencia nos respalda.
+    </p>
+  </div>
+</div>
 
-<div class="container" fxLayout="column" fxLayoutAlign="center center">
-  <div class="descripcion">
-    <mat-card>
-      <mat-card-title>
-        <h2>Nosotros</h2>
-      </mat-card-title>
-      <p>Somos una empresa con m&aacute;s de 15 a&ntilde;os de experiencia en el soporte t&eacute;cnico,
-        venta y mantenimiento de equipos de c&oacute;mputo, y redes inform&aacute;ticas.</p>
-      <p>
-        Brindamos nuestros servicios a particulares, as&iacute; como a grandes empresas reconocidas a nivel nacional.
-      </p>
-    </mat-card>
-    <div>
-      <img src="/assets/images/soporteRA1.png">
-    </div>
+<div class="container_img">
+  <div class="card">
+    <img src="./assets/images/reparacionJra.webp">
+    <div class="card__head">Mantenimiento y Soporte T&eacute;cnico</div>
+  </div>
+  <div class="card">
+    <img src="./assets/images/componentes3.webp">
+    <div class="card__head">Venta de equipos y componentes de c&oacute;mputo</div>
+  </div>
+  <div class="card">
+    <img src="./assets/images/desarrolloWebJra1.webp">
+    <div class="card__head">Diseño de P&aacute;ginas Web</div>
+  </div>
+  <div class="card">
+    <img src="./assets/images/videJra.webp">
+    <div class="card__head">Instalaci&oacute;n de sistemas de video-vigilancia</div>
+  </div>
+  <div class="card">
+    <img src="./assets/images/redesJra.webp">
+    <div class="card__head">Redes</div>
   </div>
 </div>
