--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,25 +5,13 @@
     fxLayoutGap="10px"
     fxFlex>
 
-  <div fxFlex="100" fxFlex.gt-sm="50">
-    <div fxLayout="row">
-      <div fxFlex="40" fxFlexOffset="20px" class="contactus">
-        <h2>Cont&aacute;ctanos!</h2>
-      </div>
-      <div fxFlex="55">
-        <h4>Por medio de:</h4>
-        <address>
-          <!--Dirección-->
-          <i class="fa fa-whatsapp"></i>: +52 5553813545<br>
-          <i class="fa fa-phone"></i>: +52 5579014500<br>
-          <a href="mailto:"></a>
-        </address>
-      </div>
-    </div>
-  </div>
-  <div fxFlex="100" fxFlex.gt-sm="45">
-    <div style="text-align:center">
+
+  <div fxFlex="100" fxFlex.gt-sm="45" fxLayout="row" fxLayoutAlign="center center">
+    <img src="/assets/images/logoRA.png" alt="logo" class="logo">
+    <h2>Cont&aacute;ctanos!: </h2>
+    <div class="social_media">
       <a mat-icon-button class="btn-facebook" target="_blank" href="https://www.facebook.com/soptecavg"><i class="fa fa-facebook fa-lg"></i></a>
+      <a mat-icon-button class="btn-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=+525553813545&text=Hola, te contacto desde la p&aacute;gina web de JRA"><i class="fa fa-whatsapp fa-lg"></i></a>
       <a mat-icon-button class="btn-linkedin" target="_blank" href="https://www.linkedin.com/in/rafael-olaf-madrigal-garc%C3%ADa-b5b155237?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bc3RHAou0RTqnDYmTA04fHQ%3D%3D">
         <i class="fa fa-linkedin fa-lg"></i></a>
       <a mat-icon-button class="btn-mail" href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
