--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -16,18 +16,34 @@ $raColor_3: #3A506B;
 $raColor_4: #5BC0BE;
 $raColor_5: #6FFFB9;
 
+h2{
+    font-family: 'Audiowide', sans-serif;
+    position: relative;
+    top: 10px;
+    right: 25px;
+}
+
 .footer{
     background-color: $raColor_2;
     color: $primary_1;
     width: 100%;
-    height: 110px;
+    height: 120px;
     font-family: 'Audiowide', sans-serif;
+}
+
+.logo{
+    width: 280px;
+    position: relative;
+    right: 75px;
 }
 
 .Copyright{
     text-align: center;
     width: 100%;
     background-color: $raColor_1;
+    padding-top: 8px;
+    position: relative;
+    top: 20px;
 }
 
 // .contactus{
@@ -36,6 +52,11 @@ $raColor_5: #6FFFB9;
 
 /***** Buttons *****/
 
+.social_media{
+    width: fit-content;
+    display: flex;
+}
 .btn-facebook {color: $primary_1; background-color: #0442CF;}
 .btn-linkedin {color: $primary_1; background-color: #004DFF;}
+.btn-whatsapp {color: $primary_1; background-color: $secondary_3;}
 .btn-mail {color: $primary_3; background-color: $secondary_2}
