--- a/src/app/components/soporte/soporte.component.html
+++ b/src/app/components/soporte/soporte.component.html
@@ -1,16 +1,15 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-
-  <div fxFlex fxLayoutAlign="center">
-    <div>
-      <h3>Nuestros Servicios</h3>
-    </div>
+<div fxLayoutAlign="center center" class="header">
+    <h1>
+      Nuestros Servicios
+    </h1>
   </div>
-
-  <div fxLayout="row" fxLayoutGap="15px" fxFlex>
+  
+  <div class="container" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15">
+    
     <mat-card *ngFor="let service of services" class="servicios_card">
       <mat-card-title>{{ service.name | uppercase }}</mat-card-title>
       <img mat-card-image src="{{ service.image }}">
       <mat-card-content>{{ service.description }}</mat-card-content>
-    </mat-card>
+    </mat-card> 
+  
   </div>
-</div>
